fix: Fix ChessRulesServiceTest failures and makeMove implementation Fixed ChessRulesService: - Added legal move validation before executing move - Now throws IllegalArgumentException for invalid moves (instead of silently failing) - Properly handles exception re-throwing Fixed ChessRulesServiceTest: - Added assertThatThrownBy import for exception testing - Fixed FEN format in makeMove test (black's turn after white moves: 'b KQkq') - Changed invalid move test to expect IllegalArgumentException - Fixed castle kingside test with proper board state (RNBQK2R) - Fixed pawn promotion test with valid FEN including both kings All ChessRulesServiceTest tests now pass (20/20). Build succeeds without test failures. Changes follow coding standards: - No var usage - No comments - Explicit types with final - AssertJ assertions